# COL781-a4-Animation

./: CMakeLists.txt  Makefile  README.md  errors.txt  impcmd.txt  try1.txt
config/: 1_fast.json  config_current.json  e3_current copy 2.json  e3_current copy.json  e3_current.json
executables/: e1 copy 2.cpp  e1 copy.cpp  e1.cpp  e2 copy.cpp  e2 new.cpp  e2 old.cpp  e2 semi.cpp  e2.cpp  e3 copy.cpp  e4.cpp  example.cpp
src/: new.cpp  obstacle copy.cpp  obstacle.cpp  obstacle.hpp  old.cpp  skeletal.cpp  skeletal.hpp  spring new.cpp  spring new.hpp  spring.cpp  spring.hpp  spring2.cpp  spring_old.cpp  spring_old.hpp
